<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/userInfo" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="344dp"
                android:layout_height="66dp"
                android:src="@drawable/motto_cqupt"
                android:scaleType="centerInside"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <!--<TextView-->
                <!--android:id="@+id/usertitle"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_marginStart="16dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="登录后可使用圈子功能"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintLeft_toRightOf="@+id/userIcon"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/userName" />-->

            <!--<TextView-->
                <!--android:id="@+id/userName"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_marginStart="16dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:text="缘去皆空"-->
                <!--android:textSize="16sp"-->
                <!--app:layout_constraintLeft_toRightOf="@+id/userIcon"-->
                <!--app:layout_constraintTop_toTopOf="parent" />-->

            <!--<ImageView-->
                <!--android:id="@+id/userIcon"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_marginStart="16dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent"-->
                <!--app:layout_constraintVertical_bias="0.0"-->
                <!--app:srcCompat="@drawable/ic_account_circle_black_48dp" />-->
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/userInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/myclass"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/classText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/course_title"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/classImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.521"
                    android:layout_marginStart="16dp" />

                <ImageView
                    android:id="@+id/classImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:backgroundTintMode="add"
                    android:tint="@color/iconTintGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/ic_dashboard_black_24dp"
                    android:layout_marginStart="16dp" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/favorite"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myclass">

                <TextView
                    android:id="@+id/favoriteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/favorite"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/favoriteImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.521" />

                <ImageView
                    android:id="@+id/favoriteImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTintMode="add"
                    android:tint="@color/iconTintGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_favorite_black_18dp" />
            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/about"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite">

                <TextView
                    android:id="@+id/aboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/about"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/aboutImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.521" />

                <ImageView
                    android:id="@+id/aboutImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTintMode="add"
                    android:tint="@color/iconTintGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_toys_black_18dp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>